# docassemble-VTSmallClaimsAnswer

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/VTSmallClaimsAnswer/data/questions/: small_claims_answer.yml
docassemble/VTSmallClaimsAnswer/data/templates/: small_claims_answer_addendum.docx  small_claims_answer_next_steps.docx
