[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.VTSmallClaimsAnswer"
version = "1.0"
description = "Small claims answer"
readme = "README.md"
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/suffolklitlab/docassemble-AssemblyLine.git@main",
    "docassemble.GithubFeedbackForm>=0.5.6",
    "docassemble.VTDisclosureOfExemptIncome @ git+https://github.com/LSVermont/docassemble-VTDisclosureOfExemptIncome.git@main",
    "docassemble.VTFeeWaiverWithIncludeYMLFile @ git+https://github.com/LSVermont/docassemble-VTFeeWaiverWithIncludeYMLFile.git@main",
    "docassemble.VTFeedback @ git+https://github.com/LSVermont/docassemble-VTFeedback.git@main",
    "docassemble.VTSharedYMLFile @ git+https://github.com/LSVermont/docassemble-VTSharedYMLFile.git@main",
    "docassemble.VTSmallClaimsCertificateOfService @ git+https://github.com/LSVermont/docassemble-VTSmallClaimsCertificateOfService.git@main",
]

[[project.authors]]
name = "Kris Surette, VTCourtForms / Legal Services Vermont"
email = "ksurette@legalservicesvt.org"

[project.urls]
Homepage = "https://VTLawHelp.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
